# QSAT_2024-2025

./: .gitignore  README.md
Beacon/: Beacon.PcbDoc  Beacon.SchDoc  PSat Beacon.PrjPcb  PSat Beacon.PrjPcbStructure  PSat Generic Beacon.PrjPcb  buzzer circuit.asc  outjob.OutJob
Beacon/Libraries/: General Components.PcbLib  General Components.SchLib  JellybeanComponents.PcbLib  MSP430.SchLib  MSP430FR2355TPT.STEP
Breadboard Adapters/0805,0603,0402,SOD-123,SOD-323/: 0805,0603,0402,SOD-123,SOD-323.PrjPcb  PCB.PcbDoc  PCB.html  PCB.txt  Schematic.SchDoc
Breadboard Adapters/QFN-16 3x3, DFN-8 2x2, DFN-16 4x2/: PCB.PcbDoc  PCB.html  PCB.txt  QFN-16 3x3, DFN-8 2x2, DFN-16 4x2.PrjPcb  QFN-16 3x3, DFN-8 2x2, DFN-16 4x2.PrjPcbStructure  Schematic.SchDoc
Breadboard Adapters/SOT-223,0606,0603/: PCB.PcbDoc  PCB.html  PCB.txt  SOT-223,0606,0603.PrjPcb  Schematic.SchDoc  outjob.OutJob
Breadboard Adapters/SOT-23,SOT-28,SOD-123/: PCB.PcbDoc  SOT-23,SOT-28,SOD-123.PrjPcb  Schematic.SchDoc
Breadboard Adapters/SOT-23,SOT-28,SOT-323/: PCB.PcbDoc  PCB.html  PCB.txt  SOT-23,SOT-28,SOT-323.PrjPcb  Schematic.SchDoc
Breadboard Adapters/TSSOP,VSSOP,MSOP,SOIC/: PCB.PcbDoc  PCB.html  PCB.txt  Schematic.SchDoc  TSSOP,VSSOP,MSOP,SOIC.PrjPcb
ESPCAM/: platformio.ini
ESPCAM/src/: main.cpp
MCU/: Design_Rules_-_PCBWay_Cheap_Boards.RUL  MCU.PcbDoc  MCU.SchDoc  PSat Generic MCU.PrjPcb  outjob.OutJob
MCU/Libraries/: General Components.PcbLib.bak  General Components.SchLib.bak  JellybeanComponents.SchLib  MSP430.LibPkg  MSP430.PcbLib  MSP430.SchLib
PSU/: Battery charger.SchDoc  Main.SchDoc  PSU.PcbDoc  PSat Generic PSU.PrjPcb  PSat Generic PSU.PrjPcbVariants  PSat PSU.PrjPcb  PSat PSU.PrjPcbStructure  README.md  Step-down converter.SchDoc  Step-up converter.SchDoc  outjob.OutJob
PSU/Documentation/: v1 README.md  v2 README.md
PSU/Libraries/: C0805C106K8PAC7800.step  EceParts.PcbLib  General Components.PcbLib  General Components.SchLib  RT4812GJ8F.IntLib
PSat/Beacon/: Beacon.PcbDoc  Beacon.SchDoc  ERRATA.md  PSat Beacon.PrjPcb  PSat Beacon.PrjPcbStructure  Payload Outline.step  outjob.OutJob
PSat/Beacon/Firmware/: .gitignore  Cargo.toml
PSat/Beacon/Firmware/.cargo/: config.toml
PSat/Beacon/Firmware/src/: main.rs
PSat/MCU/: Design_Rules_-_PCBWay_Cheap_Boards.RUL  ERRATA.md  MCU.PcbDoc  MCU.SchDoc  PSat MCU.PrjPcb  PSat MCU.PrjPcbStructure  outjob.OutJob
PSat/MCU/Firmware/Rust/: .gitignore  Cargo.toml  README.md  report.json  run.sh
PSat/MCU/Firmware/Rust/.cargo/: config.toml
PSat/MCU/Firmware/Rust/embedded-lora-rust/: .appveyor.yml  .gitignore  Cargo.toml  README.md
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/: Cargo.toml  README.md
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/: lib.rs
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/lora/: airtime.rs  config.rs  mod.rs  types.rs
PSat/MCU/Firmware/Rust/embedded-lora-rust/rfm95/src/rfm95/: connection.rs  driver.rs  mod.rs  registers.rs
PSat/MCU/Firmware/Rust/mspdebug/: bin
PSat/MCU/Firmware/Rust/src/: board.rs  gps.rs  lora.rs  main.rs  panic_handler.rs  pin_mappings_v2_0.rs  serial.rs
PSat/PSU/: Battery charger.SchDoc  (+10 more)
Payload Template/: Main.SchDoc  PSat Generic PSU.PrjPcb  Payload.PcbDoc  Payload.PrjPcbStructure  Payload.SchDoc  PayloadExample.PcbDoc  Psat Payload.PrjPcb  Psat Payload.PrjPcbStructure  outjob.OutJob
QSat_firmware/: platformio.ini  platformio_patch.py
QSat_firmware_2/: platformio.ini
Shared Libraries/: APSS Flight Parts.PcbLib  APSS Flight Parts.SchLib  APSS Generic Components.PcbLib  APSS Generic Components.SchLib  APSS Prototype Parts.PcbLib  APSS Prototype Parts.SchLib  Design_Rules_-_PCBWay_Cheap_Boards.RUL  General Components.PcbLib  General Components.SchLib  JellybeanComponents.PcbLib  JellybeanComponents.SchLib  outjob.OutJob
esp32-remote/: platformio.ini
(+244 files in other folders)
