[package]
name = "apss_beacon_pcb_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
panic-msp430 = "0.4.0"
msp430-rt = "0.4.0"
msp430fr2355 = { version = "0.5.1", features = ["rt", "critical-section"] }
msp430fr2x5x-hal = "0.4.1"

embedded-hal = { version = "0.2.7", features = ["unproven"] }

sx127x_lora = "0.3.1"

nb = "*"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"