[package]
name = "embedded-lora-rfm95"
version = "0.1.3"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A `no-std`-compatible, opinionated driver for the RFM95 LoRa modem"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-lora-rust"
readme = "README.md"


[badges]


[features]
default = []
debug = []
fugit = ["dep:fugit"]


[dependencies]
embedded-hal = { version = "1.0.0", default-features = false }
fugit = { version = "0.3.7", default-features = false, optional = true }


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
